--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-<title> [+] FarhanXCode7 - Rest APIs [+]  </title>
+<title> [+] Vy - Rest APIs [+]  </title>
 <meta charset="UTF-8"> 
 <meta name="robots" content="all"> 
 <meta name="robots schedule" content="auto"> 
@@ -178,13 +178,13 @@ font-family: 'New Rocker',cursive;
 <div class="blink">
 <div id="back"><font size="20">
 <b>
-  <span class="one">[+] REST</span><span class="two"> APIs FXC7 [+]</span>
+  <span class="one">[+] REST</span><span class="two"> APIs Vyloli [+]</span>
   </b>
 </font>
 </div>
 </div>
 <br>
-<a id="one" href="/docs">Documentasi</a>
+<a id="one" href="/docs">Open Docs</a>
 <script type="text/javascript">
 Sayings = "";
 			var now = new Date();
