--- a/views/docs.html
+++ b/views/docs.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Rest API - Fxc7</title>
+  <title>Rest API - Vyloli </title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="sidebar-brand-icon">
         	<img src="img/logo/logo2.png">
         </div>
-        <div class="sidebar-brand-text mx-3">Fxc7 API</div>
+        <div class="sidebar-brand-text mx-3">Vyloli API</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
@@ -278,13 +278,13 @@
 <div class="version"><b>Contact me</b></div>
       </div>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://wa.me/628311800241">
+            <a class="nav-link collapsed" href="https://wa.me/628311841">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/Fxc7">
+            <a class="nav-link collapsed" href="https://github.com/lo">
             <i class="fab fa-fw fa-github"></i>
                     <span>Github</span>
             </a>
@@ -296,7 +296,7 @@
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By Fxc7</b></div>
+      <div class="version"><b>Made With ♥️ By Livy Api</b></div>
     </ul>
     <!-- Sidebar -->
       <div id="content-wrapper" class="d-flex flex-column">
